<resources>
    <string name="app_name">Infits-Dietition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Loremipsum">Lorem ipsum dolor sit amet, consectetur
adipiscing elit, sed do eiusmod tempo
incididunt ut labore et dolore magna aliqua.
Ut enim ad minim veniam, quis nostrud
exercitation ullamco laboris nisi ut aliquip</string>

    //ankit start
    <string name="new_recipe">New Recipe</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="nutrients">Nutrients</string>
    <string name="courses">Courses</string>
    <string name="category">Category</string>
    <string name="ronald_richards">Ronald Richards</string>
    <string name="client_profile">Client Profile</string>
    <string name="preparation_time">Preparation Time</string>
    <string name="cooking_time">Cooking Time</string>
    <string name="servings">Servings</string>
    <string name="calories">Calories</string>
    <string name="proteins">Proteins</string>
    <string name="personal_info">Personal Info</string>
    <string name="name_plan_etc">Name,Plan,etc</string>

    <string name="gmail">ronaldrichards@gmail.com</string>
    <string name="fats">Fats</string>
    <string name="carbs">Carbs</string>
    <string name="elevenses_11am">Elevenses(11am)</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="snack">Snack</string>
    <string name="tea">Tea</string>
    <string name="dinner">Dinner</string>
    <string name="others">Others</string>
    <string name="add_more">+ Add more</string>
    <string name="upma">Upma</string>
    <string name="coffee">Coffee</string>
    <string name="oatmeal">Oatmeal</string>
    <string name="paratha">Paratha</string>
    <string name="juice">Juice</string>
    <string name="crepes">Crepes</string>
    <string name="waffles">Waffles</string>
    <string name="sandwich">Sandwich</string>
    <string name="omllete">Omllete</string>
    <string name="poha">Poha</string>
    <string name="butter_bread">Butter bread</string>
    <string name="croissants">Croissants</string>
    <string name="pancake">Pancake</string>
    <string name="fibre">Fibre</string>
    <string name="add_ingredients">Add Ingredients</string>
    <string name="add_directions">Add Directions</string>
    <string name="add_more_ingredients">Add more ingredients</string>
    <string name="done">Done</string>
    <string name="add_more_directions">Add more directions</string>
    <string name="directions">Directions</string>
    //ankit ends

    //piyush
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="dashboard_fragment">Dashboard fragment</string>
    <string name="title_activity_home_navigation">HomeNavigation</string>
    <string name="client">ClientList</string>
    <string name="appointment">Appointments</string>
    <string name="setting">Settings</string>
    <string name="recipies">Recipies</string>
    <string name="mail">Mail</string>
    <string name="live">Live</string>
    <string name="chats">Chats</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_new">Add new</string>
    <string name="all_recipies">All Recipies</string>
    <string name="diet_chart">Diet Chart</string>
    <string name="plan_your_diet">Plan your diet</string>
    <string name="metrics">Metrics</string>
    <string name="check_progress">Check progress</string>
    <string name="tracker">Tracker</string>
    <string name="track_meal">Track Meal</string>
    <string name="health_details">Health Details</string>
    <string name="form_document">Form,Document</string>
    <string name="chat_with">Chat with...</string>
    <string name="never">Never Give Up. Great Things. Take Time.</string>
    <string name="steps">Steps</string>
    <string name="_500">500</string>
    <string name="_1100">1100</string>
    <string name="goal">Goal</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="_800">800</string>
    <string name="bpm">bpm</string>
    <string name="_120">120</string>
    <string name="water">Water</string>
    <string name="ml">ml</string>
    <string name="_8">8</string>
    <string name="hr">hr</string>
    <string name="_35">35</string>
    <string name="min">min</string>
    <string name="hours">hours</string>
    <string name="weight_track">Weight Track</string>
    <string name="_80">80</string>
    <string name="kg">kg</string>
    <string name="calorie_track">Calorie Track</string>
    <string name="kcal">kcal</string>
    <string name="where">“Dieting is the only game where you win when you lose!”</string>
    <string name="set_goal">Set Goal</string>
    <string name="rate">Rate</string>
    <string name="hrt">Heart</string>
    <string name="sleep">Sleep</string>
    <string name="daily_count">Daily Count</string>
    <string name="glasses">Glasses</string>
    <string name="weekly_avg">Weekly Avg</string>
    <string name="monthly_avg">Monthly Avg</string>
    <string name="monthly">Monthly Avg</string>
    <string name="total">Total</string>
    <string name="past_activity">Past Activity</string>
    <string name="view_all">View All</string>
    <string name="weight">Weight</string>
    <string name="trac">Track</string>
    <string name="cal">Calorie</string>
    <string name="sep">SEP</string>
    <string name="item">Item</string>
    <string name="shake">Shake</string>
    <string name="_180_ml">180 ml</string>
    <string name="_9_10_am">9:10 AM</string>
    <string name="back">Back</string>

    //end


    <string name="navigation_drawer_open">Navigation Drawer Opened</string>
    <string name="navigation_drawer_close">Navigation Drawer Closed</string>
    <string name="off">All Chats</string>
    <string name="on">Unread Chats (2)</string>
    <string name="about_me">About me: \nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitatio ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua... Read More</string>

</resources>