<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvAddDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_directions"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/fonts"
        />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal"

        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddDialog">


        <EditText
            android:id="@+id/dirnMethods"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/blackborder"
            android:gravity="start|center_vertical"
            android:hint="@string/directions"
            android:paddingStart="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>




    <TextView
        android:id="@+id/doneBtn"
        android:layout_width="112dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="14dp"
        android:background="@drawable/grad"
        android:gravity="center"
        android:text="@string/done"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="23dp"
        app:layout_constraintTop_toBottomOf="@+id/ll1" />



</androidx.constraintlayout.widget.ConstraintLayout>