<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomsheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/sheet_bg"
    android:orientation="vertical"
    android:padding="15dp"
    app:behavior_hideable="false"
    app:behavior_peekHeight="12dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/view_course"
        android:layout_width="65dp"
        android:layout_height="6dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/background_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_courses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_course"
        android:gravity="center"
        android:text="@string/courses"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/view_course" />


    <RadioGroup
        android:id="@+id/courseRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_courses"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_courses">

        <RadioGroup
            android:id="@+id/rg1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/r1"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:padding="8dp"
                android:textSize="11sp"
                android:paddingStart="15dp"
                android:layout_weight="1"
                android:paddingEnd="15dp"
                android:text="@string/breakfast"
                android:textAlignment="center"
                android:textColor="@drawable/radiotext_color"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/r2"
                android:layout_width="100dp"
                android:layout_margin="8dp"
                android:textSize="11sp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:padding="8dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/elevenses_11am"
                android:textAlignment="center"
                android:textColor="@drawable/radiotext_color"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/r3"
                android:layout_width="100dp"
                android:textSize="11sp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:paddingStart="25dp"
                android:paddingEnd="25dp"
                android:layout_weight="1"
                android:text="@string/lunch"
                android:textAlignment="center"
                android:textColor="@drawable/radiotext_color"
                android:textStyle="bold" />


        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/r4"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="11sp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:padding="8dp"
                android:text="@string/snack"
                android:textAlignment="center"
                android:textColor="@drawable/radiotext_color"
                android:textStyle="bold"
                />

            <RadioButton
                android:id="@+id/r5"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_gravity="center"

                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:padding="8dp"
                android:textSize="11sp"
                android:text="@string/tea"
                android:textAlignment="center"
                android:textColor="@drawable/radiotext_color"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/r6"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:text="@string/dinner"
                android:textSize="11sp"
                android:textAlignment="center"
                android:textColor="@drawable/radiotext_color"
                android:textStyle="bold" />


        </RadioGroup>

        <RadioGroup
            android:id="@+id/rg3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/r7"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:text="@string/dinner"
                android:textSize="11sp"
                android:textAlignment="center"
                android:textColor="@drawable/radiotext_color"
                android:textStyle="bold" />
            <RadioButton
                android:visibility="invisible"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:padding="8dp"
                android:text="@string/tea"
                android:textSize="11sp"
                android:textAlignment="center"
                android:textColor="@drawable/radiotext_color"
                android:textStyle="bold" />

            <RadioButton
                android:visibility="invisible"
                android:layout_width="100dp"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/radio_selector"
                android:button="@android:color/transparent"
                android:elevation="4dp"
                android:padding="8dp"
                android:text="@string/tea"
                android:textAlignment="center"
                android:textColor="@drawable/radiotext_color"
                android:textStyle="bold" />

        </RadioGroup>


    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>