<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FinalRecipes"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cardNav"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:layout_alignParentStart="true"
            android:foregroundGravity="center"
            app:cardCornerRadius="160dp"
            app:cardElevation="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/dash" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_newRecipe"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:fontFamily="@font/fonts"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/new_recipe"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_dummyimg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="8dp"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:cardCornerRadius="20dp"
            android:visibility="visible"
            app:cardUseCompatPadding="false"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardPreventCornerOverlap="true"
            app:cardElevation="@dimen/_5sdp">
            <ImageView
                android:id="@+id/finalImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:background="@drawable/dummy_recipes_img"
                 />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="20dp"
            android:background="@drawable/background_grey"
            android:layout_marginTop="8dp"
            android:layout_marginStart="5dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="14dp"
                android:layout_height="14dp"
                android:background="@drawable/star"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="4dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="4.8"
                android:textSize="14sp"
                android:fontFamily="@font/fonts"
                android:textColor="#797979"
                android:layout_marginTop="-4dp"
                android:layout_gravity="center"
                android:layout_marginStart="3dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="65dp"
            android:layout_height="25dp"
            android:background="@drawable/background_grey"
            android:layout_marginStart="5dp"
            android:layout_marginTop="208dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/final_recipe_time_vector"
                android:layout_gravity="center_vertical"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tv_cookingTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textSize="14sp"
                    android:fontFamily="@font/fonts"
                    android:textColor="#A3A1A1"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="min"
                    android:textSize="14sp"
                    android:fontFamily="@font/fonts"
                    android:gravity="center"
                    android:textColor="#A3A1A1"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ll_minerals"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/rl_dummyimg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="44dp">
            <TextView
                android:id="@+id/calTxt"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="298"
                android:fontFamily="@font/fonts"
                android:textColor="#9C5EF4"
                android:layout_marginTop="-2dp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/calories"
                android:textSize="12sp"
                android:fontFamily="@font/fonts"
                android:textColor="#858383"
                android:layout_marginTop="-10dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="44dp">
            <TextView
                android:id="@+id/fatsTxt"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="4g"
                android:fontFamily="@font/fonts"
                android:textColor="#9C5EF4"
                android:layout_marginTop="-2dp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/fats"
                android:textSize="12sp"
                android:fontFamily="@font/fonts"
                android:textColor="#858383"
                android:layout_marginTop="-10dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginEnd="44dp">
            <TextView
                android:id="@+id/proteinsTxt"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="10g"
                android:fontFamily="@font/fonts"
                android:textColor="#9C5EF4"
                android:layout_marginTop="-2dp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/proteins"
                android:textSize="12sp"
                android:fontFamily="@font/fonts"
                android:textColor="#858383"
                android:layout_marginTop="-10dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView
                android:id="@+id/carbsTxt"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:text="54"
                android:fontFamily="@font/fonts"
                android:textColor="#9C5EF4"
                android:layout_marginTop="-2dp"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/carbs"
                android:textSize="12sp"
                android:fontFamily="@font/fonts"
                android:textColor="#858383"
                android:layout_marginTop="-10dp"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/final_recipe_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginEnd="@dimen/_25sdp"
        android:background="@drawable/tab_bg"
        android:padding="4dp"
        android:paddingHorizontal="10dp"
        app:tabIndicator="@drawable/indicators"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorColor="@color/white"
        app:tabIndicatorGravity="stretch"
        app:tabMode="auto"
        app:tabSelectedTextColor="@android:color/black" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/final_recipe_view_pager"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        />
</LinearLayout>